fixing landscape mode layout issues

--- a/src/assets/css/index.sass
+++ b/src/assets/css/index.sass
@@ -1,1 +1,12 @@
 @import './fonts.sass'
+
+/* Prevent all touch zooming and remove the 300ms delay */
+html, body
+  touch-action: manipulation
+  -ms-touch-action: manipulation
+  overflow: hidden
+  /* Prevents "rubber-banding" scroll effects */
+  position: fixed
+  /* Extra insurance against the layout moving */
+  width: 100%
+  height: 100%
